<resources>
    <string name="app_name">Buffaloes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="name_big">Buffaloes</string>
    <string name="name_little">Estrus Detection Organizer</string>

    <string name="tab_1">คำนวณ</string>
    <string name="tab_2">พฤติกรรม</string>
    <string name="tab_2_sub">การเป็นสัดในกระบือ</string>
    <string name="tab_3">การเหนี่ยวนำ</string>
    <string name="tab_3_sub">การเป็นสัด</string>
    <string name="tab_4">การผสมเทียม</string>
    <string name="tab_5">เพิ่มเติม</string>
    <string name="tab_5_menu_1_1">คำศัพท์</string>
    <string name="tab_5_menu_2">เกี่ยวกับเรา</string>
    <string name="tab_5_menu_2_1">ผู้จัดทำ</string>
    <string name="tab_5_menu_2_2">บรรณานุกรม</string>

    <string name="input_1">กดเพื่อใส่ข้อมูล</string>
    <string name="input_2">กดเพื่อใส่ข้อมูล</string>

    <string name="result_main_title">ผลการคำนวณ</string>
    <string name="result_sub_title">การตั้งท้องของกระบือ</string>

    <string name="tab2_detail">\t\t\tกระบือเพศเมียที่จะผสมติดได้จะต้องอยู่ในระยะเป็นสัด ซึ่งเป็นระยะที่แสดงอาการมีอารมณ์ทางเพศและพร้อมที่จะได้รับการผสมพันธุ์ อาการแสดงการเป็นสัดของกระบือไม่ค่อยชัดเจนเหมือนในโค ผู้เลี้ยงจะต้องสังเกตให้ดี กระบือไทยจะเป็นสัดอยู่นานประมาณ 24 ถึง 36 ชั่วโมง กระบือเพศเมียประมาณ 30 ถึง 40 เปอร์เซ็นต์ จะแสดงอาการเป็นสัดไม่ชัดเจนหรือเป็น “สัดเงียบ” และส่วนใหญ่จะแสดงอาการเป็นสัดในเวลากลางคืน ดังนั้นถ้าใช้วิธีการจูงเข้าผสมหรือการผสมเทียมแล้วผู้เลี้ยงต้องคอยสนใจสังเกตให้ดี มิฉะนั้นอาจจะพลาดการผสม</string>
    <string name="tab3_detail">\t\t\tการสังเกตุการเป็นสัดที่ถูกต้องชัดเจน เป็นปัจจัยที่สำคัญที่จะช่วยให้การผสมเทียมมีประสิทธิภาพมากยิ่งขึ้น แต่การสังเกตุการเป็นสัดที่ถูกต้องก็ยังเป็นปัญหาที่เกษตรกรส่วนใหญ่ยังไม่สามารถปฏิบัติได้ ทำให้ความสำเร็จในการผสมเทียมยังไม่สูงนัก อีกทั้งการให้บริการผสมเทียมยังไม่ทั่วถึงและทันเวลา ดังนั้นการจัดการให้ให้กระบือเป็นสัดพร้อมกันหลายๆตัว ก็จะเป็นโอกาสให้กระบือเหล่านั้นได้รับการผสมเทียมอย่างถูกต้อง ทันเวลา หรือถ้าเป็นฝูงกระบือขนาดใหญ่ก็จะช่วยให้กระบือในฝูงได้รับการผสมพร้อมกันจำนวนมากขึ้น ทำให้การจัดการเรื่องการคลอด การหย่านม ทำได้พร้อมๆ กัน ทำให้งานเป็นระบบดีขึ้น ดังนั้นการใช้ฮอร์โมนที่เกี่ยวข้องกับระบบสืบพันธุ์ ที่มีจำหน่ายอยู่ในท้องตลาดในปัจจุบันจะช่วยจัดการให้กระบือเป็นสัดเพื่อกำหนดการผสมได้แม่นยำขึ้น</string>
    <string name="tab4_detail">\t\t\tการที่จะปฏิบัติงานผสมเทียมกระบือ จำเป็นต้องมีความรู้พื้นฐานเกี่ยวกับกายวิภาคและสรีรวิทยาระบบสืบพันธุ์ของกระบือเพศเมีย และเทคนิคการผสมเทียม เพื่อที่จะปฏิบัติงานให้ได้ผลอย่างมีประสิทธิภาพ ระบบสืบพันธุ์ของกระบือเพศเมียเป็นระบบที่สลับซับซ้อน ไม่เพียงแต่ทำหน้าที่ผลิตไข่ หรือเซลล์สืบพันธุ์เพศเมียแต่สร้างฮอร์โมนหลายชนิดที่สำคัญที่ช่วยให้วงจรการสืบพันธุ์เป็นไปตามปกติ และยังเป็นที่เจริญเติบโตและเป็นแหล่งอาหารของลูกอ่อนขณะตั้งท้อง</string>

    <string name="result_day1">วันที่ตั้งท้อง</string>
    <string name="result_day2">วันครบกำหนดคลอด</string>
    <string name="result_day3">ครบกำหนด</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="calName">คำนวณการตั้งท้องของกระบือ</string>
    <string name="calCell1">วันแรกของการผสมพันธุ์</string>
    <string name="calCell2">จำนวนวันเฉลี่ยของวงรอบการเป็นสัดในแต่ละครั้ง</string>
    <string name="calButton">คำนวณ</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_vocab">VocabActivity</string>
    <string name="title_activity_device">DeviceActivity</string>

</resources>
