<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.melonchan.buffalo_project.fragment.tab1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pic" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainScreen_text_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:fontFamily="sans-serif-bold"
                android:text="@string/name_big"
                android:textSize="36dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mainScreen_text_little"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/name_little"
                android:textSize="16dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="#398e32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-bold"
            android:text="@string/calName"
            android:textSize="54px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/calCell1"
            android:textColor="#979797"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:cardBackgroundColor="#92f2f2f2"
                app:cardCornerRadius="22dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/main_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/input_1"
                    android:textColor="#b6b6b6"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/main_date_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:clickable="true"
                android:theme="@style/mainButton" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/calCell2"
            android:textColor="#979797"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:cardBackgroundColor="#92f2f2f2"
                app:cardCornerRadius="22dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/main_cycle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/input_2"
                    android:textColor="#b6b6b6"
                    android:textSize="15dp" />

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/main_cycle_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:clickable="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="48dp">

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:cardCornerRadius="28dp"
                app:cardElevation="0dp">

                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    app:cardBackgroundColor="#398e32"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:fontFamily="sans-serif-bold"
                        android:text="@string/calButton"
                        android:textColor="#ffffff"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:id="@+id/main_cal_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:theme="@style/mainButton" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
