<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.melonchan.buffalo_project.fragment.tab5Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_centerHorizontal="false"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="sans-serif-bold"
                android:id="@+id/tab_5_name"
                android:layout_gravity="left"
                android:textSize="36dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_5"
            />
        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:background="#4f000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>



    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33333"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="137dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66666"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="274dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toLeftOf="@+id/guideline6"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/relativeLayout">

            <RelativeLayout
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="00dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_gravity="center_horizontal"
                        app:cardBackgroundColor="#398e32"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="40dp"
                        android:layout_width="82dp"
                        android:layout_height="82dp">

                        <android.support.v7.widget.CardView
                            android:layout_margin="2dp"
                            app:cardBackgroundColor="#ffffff"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="39dp"
                            android:layout_width="78dp"
                            android:layout_height="78dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_people"
                                android:tint="#398e32"
                                android:layout_gravity="center"
                                />

                        </android.support.v7.widget.CardView>

                    </android.support.v7.widget.CardView>

                    <TextView
                        android:textColor="#398e32"
                        android:textSize="18dp"
                        android:layout_marginTop="12dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_5_menu_2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/relativeLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="00dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_gravity="center_horizontal"
                        app:cardBackgroundColor="#398e32"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="40dp"
                        android:layout_width="82dp"
                        android:layout_height="82dp">

                        <android.support.v7.widget.CardView
                            app:cardBackgroundColor="#ffffff"
                            app:cardElevation="0dp"
                            android:layout_margin="2dp"
                            app:cardCornerRadius="39dp"
                            android:layout_width="78dp"
                            android:layout_height="78dp">

                            <ImageView
                                android:tint="#398e32"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_aware"
                                android:layout_gravity="center"
                                />

                        </android.support.v7.widget.CardView>

                    </android.support.v7.widget.CardView>

                    <TextView
                        android:textColor="#398e32"
                        android:textSize="18dp"
                        android:layout_marginTop="12dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_5_menu_2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/relativeLayout"
            android:layout_marginRight="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp">

            <RelativeLayout
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="00dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_gravity="center_horizontal"
                        app:cardBackgroundColor="#398e32"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="40dp"
                        android:layout_width="82dp"
                        android:layout_height="82dp">

                        <android.support.v7.widget.CardView
                            android:layout_margin="2dp"
                            app:cardBackgroundColor="#ffffff"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="39dp"
                            android:layout_width="78dp"
                            android:layout_height="78dp">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:tint="#398e32"
                                android:src="@drawable/ic_translate"
                                android:layout_gravity="center"
                                />

                        </android.support.v7.widget.CardView>


                    </android.support.v7.widget.CardView>

                    <TextView
                        android:textSize="18dp"
                        android:textColor="#398e32"
                        android:layout_marginTop="12dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tab_5_menu_1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>

</LinearLayout>
